--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	</head>
 	<body>
 		<canvas id="myCanvas"></canvas>
+		<script type="text/javascript" src="controls.js"></script>
+		<script type="text/javascript" src="car.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
